<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mantenimiento">

    <TextView
        android:id="@+id/tvTituloD3"
        android:layout_width="133dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/tvTituloD"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="182dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="288dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbLlenadoLR3"
        android:layout_width="233dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:text="@string/cbLlenadoLR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTExtras3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="108dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:text="@string/tvTituloDyV"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spCliente3"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbLlenadoLF3"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginTop="41dp"
        android:text="@string/cbLlenadoLF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbLlenadoLR3" />

    <TextView
        android:id="@+id/tvTExtras3"
        android:layout_width="138dp"
        android:layout_height="27dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="142dp"
        android:text="@string/tvTExtras"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lvVehiculos"
        android:layout_width="224dp"
        android:layout_height="134dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btVolverserv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="108dp"
        android:text="Resumen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbCambioF3"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="32dp"
        android:text="@string/cbCambioF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbLlenadoLR3" />

    <CheckBox
        android:id="@+id/cbCambioA3"
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:text="@string/cbCambioA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTExtras3" />

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="32dp"
        android:text="@string/etRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etcosto"
        android:layout_width="152dp"
        android:layout_height="41dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="288dp"
        android:ems="10"
        android:hint="@string/costo"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etDescripcion" />

    <TextView
        android:id="@+id/tvTodo"
        android:layout_width="281dp"
        android:layout_height="109dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="84dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/botonRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btVolver"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>